--- a/montage/src/App.css
+++ b/montage/src/App.css
@@ -1,4 +1,5 @@
 .App {
+  display: flex;
   text-align: center;
   width: 100%;
   height: 100%;
@@ -241,4 +242,13 @@
 
 #CoverPageComment1{
   font-size: 30px;
+}
+
+
+.RankList{
+  background-color: #EDC810;
+  height: 270px;
+  margin-left: auto;
+  margin-right: 0;
+  align-items: center;
 }
